# BINO-SD

./: .gitignore  README.md  environment.yml  pyproject.toml
scripts/: aggregate_results.py  evaluate.py  generate_benchmark_suite.py  generate_dataset.py  make_dataset_figure.py  make_method_figure.py  make_paper_tables.py  run_benchmark_preset.py  setup_env.ps1  setup_gpu_env.ps1  train.py
src/bi_operator/: __init__.py  data.py  model.py  pde.py  train_utils.py
